--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <title>Example SMART App</title>
         <script src="https://cdn.jsdelivr.net/npm/fhirclient/build/fhir-client.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <style>
             #patient, #appointments, #slots {
                 font-family: Monaco, monospace;
@@ -14,6 +15,69 @@
                 border: 1px solid #CCC;
             }
         </style>
+
+        <script language="javascript">
+            function GetSlotsTable(slotsData)
+            {
+                var html = `
+                <table>
+                    <tr>
+                        <th>Service Type
+                            <select id="serviceType" onchange="GetSelectedSlots()">
+                                <option value''>Choose...</option>
+                                <option value'EVisit'>EVisit</option>
+                                <option value='WellChild'>Well Child Check</option>
+                            </select>
+                        </th>
+                        <th>Slot ID</th>
+                        <th>Start <input type="date" id="startDate" name="startDate" onchange="GetSelectedSlots()"></th>
+                        <th>End <input type="date" id="endDate" name="endDate" onchange="GetSelectedSlots()"></th>
+                        <th>Status</th>
+                    </tr>
+                    `;
+                slotsData.forEach(slot => {
+                    html += '<tr>';
+                    html += '<td>' + getServiceType(slot) + '</td>'; 
+                    html += '<td>' + slot.resource.id + '</td>';
+                    //html += '<td>' + slot.resource.schedule.reference + '</td>';
+                    html += '<td>' + formatDate_mmddyyyy_hhmm(slot.resource.start) + '</td>';
+                    html += '<td>' + formatDate_mmddyyyy_hhmm(slot.resource.end) + '</td>';
+                    html += '<td><a onclick="MakeAppointment(\'' + slot.resource.id + '\')" href="#">' + slot.resource.freeBusyType + '</a></td>';
+                    html +='</tr>'
+                });
+                html += '</table>';
+                $("#slotsTable").html(html);
+            }
+
+            function getServiceType(slot)
+            {
+                var serviceDesc = "";
+                slot.resource.type.forEach(service => {
+                    if(service.coding.length > 0)
+                        serviceDesc = service.coding[0].display;
+                    //service.coding.forEach(code => {
+                    //    serviceDesc += code.display;
+                    //});
+                });
+                return serviceDesc;
+            }
+
+            function formatDate_mmddyyyy_hhmm(dateString)
+            {
+                var d = new Date(dateString);
+                return ((d.getUTCMonth()+1) < 10 ? '0' + (d.getUTCMonth()+1) : (d.getUTCMonth()+1)) + 
+                    "/" + (d.getUTCDate() < 10 ? '0' + d.getUTCDate() : d.getUTCDate() ) + 
+                    "/" + d.getUTCFullYear() +
+                    " " + (d.getUTCHours() < 10 ? '0' + d.getUTCHours() : d.getUTCHours() )+ 
+                    ":" + (d.getUTCMinutes() < 10 ? '0' + d.getUTCMinutes() : d.getUTCMinutes() );
+            }
+
+            function MakeAppointment(slotId)
+            {
+                alert(slotId);
+            }
+        </script>
+
     </head>
     <body>
         <h4>Current Patient</h4>
@@ -25,6 +89,8 @@
         <h4>Slots</h4>
         <div id="slots">Loading...</div>
         <br/>
+        <div id="slotsTable"></div>
+
         <script type="text/javascript">
             FHIR.oauth2.ready().then(function(client) {
                 
@@ -90,6 +156,8 @@
                 .then(
                     function(slots) {
                         document.getElementById("slots").innerText = JSON.stringify(slots, null, 4);
+                        GetSlotsTable(slots);
+                        
                     },
                     function(error) {
                         document.getElementById("slots").innerText = error.stack;
