--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
                 overflow: scroll;
                 border: 1px solid #CCC;
             }
+
+            body {
+                font-family:Verdana, Geneva, Tahoma, sans-serif;
+                font-size: 14px;
+
+            } 
+            table, th, td {
+              border: 1px solid black;
+              border-collapse: collapse;
+              font-size: 14px;
+            }
+            th, td {
+              padding: 5px;
+            }
+                        
         </style>
 
         <script language="javascript">
