troubleshoot getting startDate endDate controls

--- a/index.html
+++ b/index.html
@@ -168,8 +168,11 @@
                         function(slots) {
                             document.getElementById("slots").innerText = JSON.stringify(slots, null, 4);
                             GetSlotsTable(slots);
-                            document.getElementById("startDate").value = formatDate_yyyymmdd(startDate);
-                            document.getElementById("endDate").value = formatDate_yyyymmdd(endDate);
+                            //document.getElementById("startDate").value = formatDate_yyyymmdd(startDate);
+                            //document.getElementById("endDate").value = formatDate_yyyymmdd(endDate);
+                            alert(document.getElementById("startDate"));
+                            document.getElementById("startDate").value = "2021-11-10";
+                            document.getElementById("endDate").value = "2021-11-11";                            
                             
                         },
                         function(error) {
