troubleshoot startDate control

--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@
                             //document.getElementById("startDate").value = formatDate_yyyymmdd(startDate);
                             //document.getElementById("endDate").value = formatDate_yyyymmdd(endDate);
                             alert(document.getElementById("startDate"));
+                            alert(startDate);
+                            alert(formatDate_yyyymmdd(startDate));
                             document.getElementById("startDate").value = "2021-11-10";
                             document.getElementById("endDate").value = "2021-11-11";                            
                             
