add PT Eval service type

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                             <select id="serviceType" onchange="GetSelectedSlots()">
                                 <option value'EVisit'>EVisit</option>
                                 <option value='Well Child Check'>Well Child Check</option>
+                                <option value='PT Eval'>PT Eval</option>
                             </select>
                         </th>
                         <th>Slot ID</th>
