--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@
                     serviceType = service.options[service.selectedIndex].text;
 
 
+                alert("serviceTypeDict : " + serviceTypeDict[serviceType]);
+
                 // get Slot
                 var slotQuery = "/Slot?";
                 //slotQuery += "slot-type=https://fhir.cerner.com/ec2458f2-1e24-41c8-b71b-0e701af7583d/codeSet/14249|25367387" + "&";
