make serviceTypeDict a var

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <script language="javascript">
 
-            let serviceTypeDict = {"EVisit": "https://fhir.cerner.com/ec2458f2-1e24-41c8-b71b-0e701af7583d/codeSet/14249|2572307909", 
+            var serviceTypeDict = {"EVisit": "https://fhir.cerner.com/ec2458f2-1e24-41c8-b71b-0e701af7583d/codeSet/14249|2572307909", 
                                    "Well Child Visit": "https://fhir.cerner.com/ec2458f2-1e24-41c8-b71b-0e701af7583d/codeSet/14249",
                                    "PT Eval": "https://fhir.cerner.com/ec2458f2-1e24-41c8-b71b-0e701af7583d/codeSet/14249|26054577"};
 
