add service type Video Visit

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             var serviceTypeDict = {"EVisit": "https://fhir.cerner.com/ec2458f2-1e24-41c8-b71b-0e701af7583d/codeSet/14249|2572307909", 
                                    "Well Child Visit": "https://fhir.cerner.com/ec2458f2-1e24-41c8-b71b-0e701af7583d/codeSet/14249",
-                                   "PT Eval": "https://fhir.cerner.com/ec2458f2-1e24-41c8-b71b-0e701af7583d/codeSet/14249|26054577"};
+                                   "Video Visit": "https://fhir.cerner.com/ec2458f2-1e24-41c8-b71b-0e701af7583d/codeSet/14249|2572307911"};
 
             function GetSlotsTable(slotsData)
             {
@@ -46,7 +46,7 @@
                             <select id="serviceType" onchange="GetSelectedSlots()">
                                 <option value'EVisit'>EVisit</option>
                                 <option value='Well Child Check'>Well Child Check</option>
-                                <option value='PT Eval'>PT Eval</option>
+                                <option value='Video Visit'>Video Visit</option>
                             </select>
                         </th>
                         <th>Slot ID</th>
