correct typo - Well Child Check, not Well Child Visit

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <script language="javascript">
 
             var serviceTypeDict = {"EVisit": "https://fhir.cerner.com/ec2458f2-1e24-41c8-b71b-0e701af7583d/codeSet/14249|2572307909", 
-                                   "Well Child Visit": "https://fhir.cerner.com/ec2458f2-1e24-41c8-b71b-0e701af7583d/codeSet/14249",
+                                   "Well Child Check": "https://fhir.cerner.com/ec2458f2-1e24-41c8-b71b-0e701af7583d/codeSet/14249",
                                    "Video Visit": "https://fhir.cerner.com/ec2458f2-1e24-41c8-b71b-0e701af7583d/codeSet/14249|2572307911"};
 
             function GetSlotsTable(slotsData)
