--- a/index.html
+++ b/index.html
@@ -33,9 +33,28 @@
 
         <script language="javascript">
 
+            var patientId = "";
+
             var serviceTypeDict = {"EVisit": "https://fhir.cerner.com/ec2458f2-1e24-41c8-b71b-0e701af7583d/codeSet/14249|2572307909", 
                                    "Well Child Check": "https://fhir.cerner.com/ec2458f2-1e24-41c8-b71b-0e701af7583d/codeSet/14249|25367387",
                                    "Video Visit": "https://fhir.cerner.com/ec2458f2-1e24-41c8-b71b-0e701af7583d/codeSet/14249|2572307911"};
+
+            var blankAppointment = {
+                "resourceType": "Appointment",
+                "status": "proposed",
+                "comment": "Appointment request comment",
+                "participant": [
+                    {
+                    "actor": {
+                        "reference": ""
+                    },
+                    "status": "needs-action"
+                    }
+                ],
+                "slot": [{
+                    "reference": ""
+                }]
+                };
 
             function GetSlotsTable(slotsData)
             {
@@ -120,6 +139,10 @@
             function MakeAppointment(slotId)
             {
                 alert(slotId);
+                var newAppointment = blankAppointment;
+                newAppointment.participant[0].actor.reference = "Patient/" + patientId;
+                newAppointment.slot.reference = "Slot/" + slotId;
+                alert("newAppointment : \n" + newAppointment);
             }
 
             function GetSlots()
@@ -200,6 +223,8 @@
 
     </head>
     <body>
+        <div id="slotsTable"></div>
+        <br/>
         <h4>Current Patient</h4>
         <div id="patient">Loading...</div>
         <br/>
@@ -210,8 +235,6 @@
         <div id="slots">Loading...</div>
         <br/>
         <input type="button" value="Get Slots" onclick="GetSlots()">
-        <br/>
-        <div id="slotsTable"></div>
 
         <script type="text/javascript">
             FHIR.oauth2.ready().then(function(client) {
@@ -220,6 +243,7 @@
                 client.patient.read().then(
                     function(pt) {
                         document.getElementById("patient").innerText = JSON.stringify(pt, null, 4);
+                        patientId = pt.id;
                     },
                     function(error) {
                         document.getElementById("patient").innerText = error.stack;
