GetSlots() on body load

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         </script>
 
     </head>
-    <body>
+    <body onload="GetSlots()">
         <div id="appointmentDiv"></div>
         <br/>        
         <input type="button" value="Get Slots" onclick="GetSlots()">
