--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
                         function(data) {
                         console.log(data);
                         document.getElementById("appointmentDiv").innerHTML = data.text.div;
+                        document.getElementById("slotDiv").innerHTML = data.text.div;
+                        document.getElementById("scheduleDiv").innerHTML = data.text.div;
                     });
 
                     // // echo the newly created appointment (or any error)
@@ -228,7 +230,26 @@
 
     </head>
     <body onload="GetSlots()">
-        <div id="appointmentDiv"></div>
+
+
+        <table style="width: 100%">
+            <colgroup>
+               <col span="1" style="width: 33%;">
+               <col span="1" style="width: 33%;">
+               <col span="1" style="width: 34%;">
+            </colgroup>
+            <tbody>
+                <tr>
+                    <td><div id="appointmentDiv"></div></td>
+                    <td><div id="slotDiv"></div></td>
+                    <td><div id="scheduleDiv"></div></td>
+                </tr>
+            </tbody>
+        </table>
+
+
+
+        
         <br/>        
         <input type="button" value="Get Slots" onclick="GetSlots()">
         <br/>
